--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <redisson.version>3.8.2</redisson.version>
+        <redisson.version>3.9.1</redisson.version>
     </properties>
 
 
@@ -98,7 +98,7 @@
             <artifactId>zookeeper</artifactId>
             <version>3.4.6</version>
         </dependency>
-        <!-- redisson -->
+        <!-- redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
