--- a/src/main/resources/application-redis-single.yml
+++ b/src/main/resources/application-redis-single.yml
@@ -2,6 +2,7 @@
 spring:
     redis:
         host: 127.0.0.1
+        password: 123456
         port: 6379
         database: 1
         timeout: 3000ms
